# digital-garden

Alura/: Story Telling.pages
Articles/ES12/: index.js
Articles/O que o Jogo do Bixo tem a ver com o PHP 8.1/: enum.php  jogoDoBixoEnum.php  pureIntersectionTypes.php  readonly.php
Articles/PHP 8.1 STUFF/: index.php  readonly.php
Articles/Rust: Afinal, o que é "Abstração a custo Zero"/: readme.md
Articles/Rust: Afinal, o que é "Abstração a custo Zero"/Javascript/: index.js
Articles/Rust: Afinal, o que é "Abstração a custo Zero"/Php/: index.php
Articles/Rust: Afinal, o que é "Abstração a custo Zero"/TypeScript/: genericsLottery.ts  index.ts  nonGenericMegaSena.ts  types.ts
Articles/Typescript: Any Vs Unknown/BasicTemplateTypeScript/: index.ts  package-lock.json  package.json
BasicTemplateTypeScript/: index.ts  question.md
Black Hat Rust /arc_example/: Cargo.toml
Black Hat Rust /mutable-pointer-example/: Cargo.toml
Black Hat Rust /mutable-pointer-example/src/: main.rs
Black Hat Rust /playarounds_generics/: Cargo.toml
Black Hat Rust /sha1_cracker/src/: main.rs
Black Hat Rust /smart-pointers-play-arounds/: Cargo.toml
Black Hat Rust /tricoder/: Cargo.toml
Black Hat Rust /tricoder/src/: main.rs  ports.rs  subdomains.rs
Util/BasicTemplateTypeScript/: index.ts  package-lock.json
bairesdev_interview/: Cargo.toml
bairesdev_interview/src/: main.rs
playarounds/an_interview_from_some_company_i_found_online_1/: Cargo.toml
playarounds/playarounds_generics/: Cargo.toml
playarounds/rooms/: Cargo.toml
playarounds/sha1_cracker/: Cargo.toml
(+24 files in other folders)
