[package]
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>", "Luís Von Müller <luisvmuller@icloud.com>"]
edition = "2018"
name = "tricoder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
serde = {version = "1", features = ["derive"]}
thiserror = "1.0"
tokio = {version = "1", features = ["full"]}
tokio_stream = "0.1.8"
trust-dns-resolver = "0.20"
